<resources>
    <string name="app_name">Formulario</string>
    <string name="register">Registrando</string>
    <string name="name_">Usuario: </string>
    <string name="nameHint">User</string>
    <string name="password1">Contraseña: </string>
    <string name="password1Hint">Password</string>
    <string name="password2">Repetir Contraseña: </string>
    <string name="password2Hint">Password2</string>
    <string name="email">Correo: </string>
    <string name="emailHint">Email</string>
    <string name="sex">Sexo: </string>
    <string name="sexM">Masculino</string>
    <string name="sexF">Femenino</string>
    <string name="date">Fecha de Nacimiento: </string>
    <string name="date2">Fecha de Nacimiento </string>
    <string name="pick_date">DD/MM/YY</string>
    <string name="cities">Ciudad: </string>
    <string name="hobbies">Hobbies: </string>
    <string name="cine">Cine</string>
    <string name="videojuegos">Videoj.</string>
    <string name="nadar">Nadar</string>
    <string name="futbol">Futbol</string>
    <string name="aceptar">Aceptar</string>
    <string name="information">Información</string>

    <string name="likesTo">le gusta </string>
    <string name="fraseCine">ir al cine</string>
    <string name="fraseVideo">jugar videojuegos</string>
    <string name="fraseNadar">nadar</string>
    <string name="fraseFutbol">jugar Futbol</string>

    <string name="userMsg1">Contraseñas diferentes</string>
    <string name="userMsg2">Falta alguna casilla por llenar</string>
    <string name="userMsg3">Falta seleccionar algún hobby</string>

    <string-array name="all_cities">
        <item>Medellín</item>
        <item>Itagüí</item>
        <item>Envigado</item>
        <item>Sabaneta</item>
        <item>Bello</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Soledad</item>
        <item>Cúcuta</item>
        <item>Ibagué</item>
        <item>Soacha</item>
        <item>Bucaramanga</item>
        <item>Santa Marta</item>
        <item>Villavicencio</item>
        <item>Valledupar</item>
        <item>Pereira</item>
        <item>Buenaventura</item>
        <item>Pasto</item>
        <item>Manizales</item>
        <item>Montería</item>
        <item>Neiva</item>
    </string-array>


</resources>
