<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.programacionmoviles.juanpabloarangoa.formulario.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_"
                android:layout_weight="2"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/eUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameHint"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:inputType="text"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password1"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/ePass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password1Hint"
                android:layout_weight="1"
                android:textSize="22sp"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                />
            <EditText
                android:id="@+id/ePass2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password2Hint"
                android:textSize="22sp"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_weight="2"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:layout_weight="1"
                android:textSize="22sp"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <RadioButton
                android:id="@+id/rSexM"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexM"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rSexF"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexF"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:onClick="onButtonDate"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:textSize="22sp"
                android:hint="@string/pick_date"
                android:id="@+id/eDatePicker"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cities"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <Spinner
                android:id="@+id/sCities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cCine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cine"/>
                <CheckBox
                    android:id="@+id/cVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/videojuegos"/>
                <CheckBox
                    android:id="@+id/cNadar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nadar"/>
                <CheckBox
                    android:id="@+id/cFutbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/futbol"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bAceptar"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onButtonAceptar"
            />
        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
